change game log layout, fix spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,7 +93,22 @@ a:hover {
     font-size: 1.5rem;
     margin-bottom: 35%;
     display: flex;
+    flex-direction: column; 
+    align-items: center;
     gap: 60px;
+}
+
+.scoring {
+    display: flex;
+    justify-content: space-between;
+    gap: 26px;
+}
+ .player-score, 
+ .cpu-score {
+    height: 50px;
+    display: flex;
+    
+
 }
 
 .button-choice {
